add listeners for price

--- a/src/main/resources/static/frontend/src/views/admin/prices/prices-view.html
+++ b/src/main/resources/static/frontend/src/views/admin/prices/prices-view.html
@@ -53,9 +53,8 @@
         content.querySelector('flow-component-renderer').setAttribute('theme', 'dialog');
       }
     }
-        }
 
-        window.currentElements.define(PricesView.is, PricesView);
+        window.customElements.define(PricesView.is, PricesView);
     </script>
 
 </dom-module>
