--- a/src/main/resources/static/frontend/src/views/admin/prices/price-editor.html
+++ b/src/main/resources/static/frontend/src/views/admin/prices/price-editor.html
@@ -1,5 +1,5 @@
 <link rel="import" href="../../../../bower_components/polymer/polymer-element.html">
-<link rel="import" href="../../../../bower_components/vaadin-form-layout/src/vaadin-form-layout.html.html">
+<link rel="import" href="../../../../bower_components/vaadin-form-layout/src/vaadin-form-layout.html">
 
 <link rel="import" href="../../../components/form-buttons-bar.html">
 <link rel="import" href="../../../components/utils-mixin.html">
