add listeners for price add checkbox to price editor confirm dialog

--- a/src/main/resources/static/frontend/src/views/orderedit/order-editor.html
+++ b/src/main/resources/static/frontend/src/views/orderedit/order-editor.html
@@ -83,6 +83,7 @@
         <!--<form-buttons-bar id="buttons"></form-buttons-bar>-->
         <buttons-bar id="footer" no-scroll$="[[niScroll]]">
             <vaadin-button slot="left" id="cancel">Отменить</vaadin-button>
+            <vaadin-button slot="left" id="delete" theme="error">Удалить</vaadin-button>
             <div slot="info" class="total">Total [[totalPrice]]</div>
             <vaadin-button slot="right" id="save" theme="primary">
                 Сохранить
