изменила generatedvalue в AbstractEntity работает диалог подтверждения добавлена колонка в таблицу прайсов, локализация datepicker, реализована функция при добавлении нового прайса другие прайсы делать недефолтными

--- a/src/main/resources/static/frontend/src/components/app-container.html
+++ b/src/main/resources/static/frontend/src/components/app-container.html
@@ -56,7 +56,7 @@
             }
         }
      }
-     customElement.define(AppContainer.is, AppContainer);
+     customElements.define(AppContainer.is, AppContainer);
 
     </script>
 </dom-module>
