--- a/src/main/resources/static/frontend/src/views/login/login-view.html
+++ b/src/main/resources/static/frontend/src/views/login/login-view.html
@@ -148,7 +148,7 @@
                 <form method="post" action="login">
                     <h2 class="login__header">Войти</h2>
                     <div class="login__layout">
-                        <vaadin-text-field id="username" label="Email" autofocus required></vaadin-text-field>
+                        <vaadin-text-field id="username" name="username" label="Email" autofocus required></vaadin-text-field>
                         <vaadin-password-field id="password" name="password" label="Пароль" required on-keydown="_onPasswordKeydown"></vaadin-password-field>
                         <vaadin-button class="login__button" on-tap="login" theme="primary">Войти</vaadin-button>
                     </div>
