изменила generatedvalue в AbstractEntity работает диалог подтверждения добавлена колонка в таблицу прайсов, локализация datepicker, реализована функция при добавлении нового прайса другие прайсы делать недефолтными

--- a/src/main/resources/static/frontend/src/views/admin/users/users-view.html
+++ b/src/main/resources/static/frontend/src/views/admin/users/users-view.html
@@ -32,7 +32,7 @@
           if (++partsLoaded === 2 && window.performance.mark) {
             // the 'loading-changed' event is fired separately for the headers (first)
             // and for the content (second). Waiting for the second time
-            window.performance.mark('bakery-page-loaded');
+            window.performance.mark('market-page-loaded');
             grid.removeEventListener('loading-changed', listener);
           }
         };
