--- a/src/main/resources/static/frontend/src/views/customer/customer-view.html
+++ b/src/main/resources/static/frontend/src/views/customer/customer-view.html
@@ -14,7 +14,7 @@
 
         </style>
         <search-bar id="search"></search-bar>
-        <vaadin-grid id="grid"></vaadin-grid>
+        <vaadin-grid id="grid" theme="crud"></vaadin-grid>
         <vaadin-dialog id="dialog" on-open-changed="_onDialogOpen"></vaadin-dialog>
 
     </template>
