--- a/src/main/resources/static/frontend/src/views/login/login-view.html
+++ b/src/main/resources/static/frontend/src/views/login/login-view.html
@@ -142,6 +142,7 @@
                 <h1 class="info__header">Маркет газеты "Магнитогорский металл"</h1>
                 <p class="info__text">
                     admin@example.com + admin
+                    b@b +Admin123
                 </p>
             </div>
             <iron-form class="login" id="form" allow-redirect>
