--- a/src/main/resources/static/frontend/src/views/admin/prices/price-editor.html
+++ b/src/main/resources/static/frontend/src/views/admin/prices/price-editor.html
@@ -2,9 +2,11 @@
 <link rel="import" href="../../../../bower_components/vaadin-form-layout/src/vaadin-form-layout.html">
 <link rel="import" href="../../../../bower_components/vaadin-button/src/vaadin-button.html">
 <link rel="import" href="../../../../bower_components/vaadin-form-layout/src/vaadin-form-item.html">
+<link rel="import" href="../../../../bower_components/vaadin-date-picker/src/vaadin-date-picker.html">
 
 <link rel="import" href="../../../components/buttons-bar.html">
 <link rel="import" href="../../../components/utils-mixin.html">
+<link rel="import" href="price-item-editor.html">
 
 <link rel="import" href="../../../../styles/shared-styles.html">
 
