--- a/src/main/resources/static/frontend/src/views/admin/users/users-view.html
+++ b/src/main/resources/static/frontend/src/views/admin/users/users-view.html
@@ -12,7 +12,7 @@
 
         </style>
         <search-bar id="search"></search-bar>
-        <vaadin-grid id="grid"></vaadin-grid>
+        <vaadin-grid id="grid" theme="crud"></vaadin-grid>
     </template>
 
     <script>
