--- a/src/main/resources/static/frontend/src/views/admin/prices/price-item-editor.html
+++ b/src/main/resources/static/frontend/src/views/admin/prices/price-item-editor.html
@@ -38,11 +38,11 @@
 
         <vaadin-form-layout id="form1">
 
-            <vaadin-form-layout id="form2" colspan="16" class="price" style="...">
-                <vaadin-combo-box id="services" colspan="8" index="[[index]]"></vaadin-combo-box>
-                <vaadin-combo-box id="units" colspan="2" index="[[index]]"></vaadin-combo-box>
-                <vaadin-text-field id="price" colspan="2" index="[[index]]"></vaadin-text-field>
-                <vaadin-text-field id="name" colspan="12" placeholder="Наименование позиции прайса" index="[[index]]"></vaadin-text-field>
+            <vaadin-form-layout id="form2" colspan="22" class="price" style="...">
+                <vaadin-combo-box id="services" colspan="6" label="Вид услуги" index="[[index]]"></vaadin-combo-box>
+                <vaadin-combo-box id="units" colspan="4" label="Ед. изм." index="[[index]]"></vaadin-combo-box>
+                <vaadin-text-field id="price" colspan="4"  label="Цена" index="[[index]]"></vaadin-text-field>
+                <vaadin-text-field id="name" colspan="22" placeholder="Наименование позиции прайса" index="[[index]]"></vaadin-text-field>
             </vaadin-form-layout>
 
             <vaadin-button class="delete self-start" id="delete" colspan="2" index="[[index]]">
