--- a/src/main/resources/static/frontend/src/views/orderedit/orders-view-of-customer.html
+++ b/src/main/resources/static/frontend/src/views/orderedit/orders-view-of-customer.html
@@ -12,7 +12,8 @@
         <style include="shared-styles">
 
         </style>
-        <vaadin-text-field id="text"></vaadin-text-field>
+        <span class="dim"><b>Контрагент:</b><span id="customer_name"></span></span>
+
         <!--<vaadin-date-picker label="Выбрать дату" id="date"></vaadin-date-picker>-->
         <search-bar id="search"></search-bar>
         <!--<vaadin-button id="add" label="Новый заказ"></vaadin-button>-->
