--- a/src/main/resources/static/frontend/src/components/app-container.html
+++ b/src/main/resources/static/frontend/src/components/app-container.html
@@ -6,6 +6,13 @@
         <style>
             :host {
                 display: flex;
+
+                position: absolute;
+                top:0;
+                bottom: var(--vaadin-overlay-viewport-bottom);
+                left: 0;
+                right: 0;
+                --vaadin-overlay-viewport-bottom: 0px;
             }
 
         </style>
