added scheduledates service

--- a/src/main/resources/static/frontend/src/views/admin/settings/settings-view.html
+++ b/src/main/resources/static/frontend/src/views/admin/settings/settings-view.html
@@ -3,6 +3,8 @@
 <link rel="import" href="../../../../bower_components/vaadin-item/src/vaadin-item.html">
 <link rel="import" href="../../../../bower_components/vaadin-dialog/src/vaadin-dialog.html">
 
+<link rel="import" href="../../../components/schedule-dates.html">
+
 <dom-module id="settings-view">
     <template>
 <style include="shared-styles">
@@ -16,13 +18,7 @@
  <vaadin-button id="scheduleButton">
   Сформировать
  </vaadin-button>
- <vaadin-dialog id="dialog">
-  <template>
-   <div>
-     Content 
-   </div>
-  </template>
- </vaadin-dialog>
+ <vaadin-dialog id="dialog"></vaadin-dialog>
 </div>
 <vaadin-item></vaadin-item>
 </template>
