--- a/src/main/resources/static/frontend/src/views/orderedit/order-editor.html
+++ b/src/main/resources/static/frontend/src/views/orderedit/order-editor.html
@@ -46,7 +46,7 @@
                 width: 10em;
             }
         </style>
-<div class=" scrollable flex1" id="main">
+<div class="scrollable flex1" id="main">
  <h2 id="title">Новый заказ</h2>
  <div class="meta-row" id="metaContainer">
   <!--<vaadin-combo-box class="status" id="status">Статус</vaadin-combo-box>-->
@@ -66,7 +66,7 @@
    </vaadin-form-item>
    <div id="invoiceContainer">
     <vaadin-checkbox id="needInvoice">
-     Ввести счет
+      Ввести счет 
     </vaadin-checkbox>
    </div>
   </vaadin-form-layout>
@@ -74,11 +74,11 @@
    <vaadin-text-field id="customerName" label="Customer" colspan="2">
     <iron-icon slot="prefix" icon="vaadin:user"></iron-icon>
    </vaadin-text-field>
-   <vaadin-text-field id="customerPhone" label="Phone number">
-    <iron-icon slot="prefix" icon="vaadin:phone"></iron-icon>
-   </vaadin-text-field>
+   <!--<vaadin-text-field id="customerPhone" label="Phone number">-->
+   <!--<iron-icon slot="prefix" icon="vaadin:phone"></iron-icon>-->
+   <!--</vaadin-text-field>-->
    <vaadin-form-item colspan="3">
-    <label slot="label">Products</label>
+    <label slot="label">Позиции</label>
    </vaadin-form-item>
    <div id="itemsContainer" colspan="3"></div>
   </vaadin-form-layout>
