--- a/src/main/resources/static/frontend/src/views/orderedit/order-items/order-items-editor.html
+++ b/src/main/resources/static/frontend/src/views/orderedit/order-items/order-items-editor.html
@@ -2,11 +2,13 @@
 <link rel="import" href="../../../../bower_components/vaadin-form-layout/src/vaadin-form-layout.html">
 <link rel="import" href="../../../../bower_components/vaadin-combo-box/src/vaadin-combo-box.html">
 <link rel="import" href="../../../../bower_components/vaadin-item/src/vaadin-item.html">
-<link rel="import" href="../../../../bower_components/vaadin-grid/src/vaadin-grid.html">
-<link rel="import" href="../../../../bower_components/vaadin-grid/src/vaadin-grid-column.html">
 <link rel="import" href="../../../components/buttons-bar.html">
 <link rel="import" href="../../../../bower_components/vaadin-button/src/vaadin-button.html">
 <link rel="import" href="../../../../bower_components/vaadin-radio-button/src/vaadin-radio-group.html">
+<link rel="import" href="../../../../bower_components/vaadin-ordered-layout/src/vaadin-horizontal-layout.html">
+<link rel="import" href="../../../components/amount-field.html">
+<link rel="import" href="../../../../bower_components/vaadin-grid/src/vaadin-grid.html">
+<link rel="import" href="../../../components/selected-dates.html">
 
 <dom-module id="order-items-editor">
     <template>
@@ -51,10 +53,20 @@
   </vaadin-form-layout>
   <vaadin-form-layout id="form3">
    <label style="font-size: var(--lumo-font-size-xs);">Даты заказа</label>
-   <vaadin-grid id="grid" class="crud"></vaadin-grid>
+   <selected-dates id="dates"></selected-dates>
+   <vaadin-grid items="[[items]]" id="grid"></vaadin-grid>
   </vaadin-form-layout>
  </vaadin-form-layout>
- <div id="selectedDates" style="width: 100%; height: 100%;"></div>
+ <div id="selectedDates" style="width: 40em; height: 35em;font-size:0.8em;">
+  <span id="selected"></span>
+ </div>
+ <vaadin-horizontal-layout>
+  <div id="dimensionsContainer"></div>
+  <amount-field id="amount" max="9007199254740991" label="Количество"></amount-field>
+  <div id="totalPrice">
+    Сумма: [[totalPrice]] 
+  </div>
+ </vaadin-horizontal-layout>
  <buttons-bar>
   <vaadin-button id="add" theme="primary" slot="left">
     Добавить 
