added scheduledates service added order items

--- a/src/main/resources/static/frontend/src/components/price-item-field.html
+++ b/src/main/resources/static/frontend/src/components/price-item-field.html
@@ -8,7 +8,7 @@
                 display: block;
             }
         </style>
-<vaadin-combo-box items="[[items]]" id="pricePlan" label="План цен"></vaadin-combo-box>
+<!--<vaadin-combo-box items="[[items]]" id="pricePlan" label="План цен"></vaadin-combo-box>-->
 <vaadin-combo-box items="[[items]]" id="service" label="Service"></vaadin-combo-box>
 <vaadin-combo-box items="[[items]]" id="unit" label="Unit"></vaadin-combo-box>
 <vaadin-combo-box items="[[items]]" id="price" label="Price"></vaadin-combo-box>
