--- a/src/main/resources/static/frontend/src/views/orderedit/order-items/order-items-editor.html
+++ b/src/main/resources/static/frontend/src/views/orderedit/order-items/order-items-editor.html
@@ -47,28 +47,28 @@
  <vaadin-form-layout id="form1">
   <vaadin-form-layout id="form2">
    <price-item-field id="priceField"></price-item-field>
-   <vaadin-combo-box id="service" label="Вид услуги"></vaadin-combo-box>
-   <vaadin-combo-box id="unit" label="Ед. изм."></vaadin-combo-box>
-   <vaadin-combo-box id="price" label="Цена"></vaadin-combo-box>
-   <h5 class="h5">Скидка</h5>
-   <vaadin-radio-group value="value" style="font-size: var(--lumo-font-size-xs);" id="discount"></vaadin-radio-group>
+   <!--<vaadin-combo-box id="service" label="Вид услуги"></vaadin-combo-box>-->
+   <!--<vaadin-combo-box id="unit" label="Ед. изм."></vaadin-combo-box>-->
+   <!--<vaadin-combo-box id="price" label="Цена"></vaadin-combo-box>-->
+   <!--<h5 class="h5">Скидка</h5>-->
+   <!--<vaadin-radio-group value="value" style="font-size: var(&#45;&#45;lumo-font-size-xs);" id="discount"></vaadin-radio-group>-->
   </vaadin-form-layout>
-  <vaadin-form-layout id="form3">
-   <label style="font-size: var(--lumo-font-size-xs);">Даты заказа</label>
-   <selected-dates id="dates"></selected-dates>
-   <vaadin-grid items="[[items]]" id="grid"></vaadin-grid>
-  </vaadin-form-layout>
+  <!--<vaadin-form-layout id="form3">-->
+   <!--<label style="font-size: var(&#45;&#45;lumo-font-size-xs);">Даты заказа</label>-->
+   <!--<selected-dates id="dates"></selected-dates>-->
+   <!--<vaadin-grid items="[[items]]" id="grid"></vaadin-grid>-->
+  <!--</vaadin-form-layout>-->
  </vaadin-form-layout>
- <div id="selectedDates" style="width: 40em; height: 35em;font-size:0.8em;">
-  <span id="selected"></span>
- </div>
- <vaadin-horizontal-layout>
-  <div id="dimensionsContainer"></div>
-  <amount-field id="amount" max="9007199254740991" label="Количество"></amount-field>
-  <div id="totalPrice">
-    Сумма: [[totalPrice]] 
-  </div>
- </vaadin-horizontal-layout>
+ <!--<div id="selectedDates" style="width: 40em; height: 35em;font-size:0.8em;">-->
+  <!--<span id="selected"></span>-->
+ <!--</div>-->
+ <!--<vaadin-horizontal-layout>-->
+  <!--<div id="dimensionsContainer"></div>-->
+  <!--<amount-field id="amount" max="9007199254740991" label="Количество"></amount-field>-->
+  <!--<div id="totalPrice">-->
+    <!--Сумма: [[totalPrice]] -->
+  <!--</div>-->
+ <!--</vaadin-horizontal-layout>-->
  <buttons-bar>
   <vaadin-button id="add" theme="primary" slot="left">
     Добавить 
@@ -104,10 +104,10 @@
           {columns: 1, labelsPosition: 'top'},
           {minWidth: '360px', columns: 2, labelsPosition: 'top'}
         ];
-        this.$.form3.responsiveSteps = [
-          {columns: 1, labelsPosition: 'top'},
-          {minWidth: '500px', columns: 3, labelsPosition: 'top'}
-        ];
+        <!--this.$.form3.responsiveSteps = [-->
+          <!--{columns: 1, labelsPosition: 'top'},-->
+          <!--{minWidth: '500px', columns: 3, labelsPosition: 'top'}-->
+        <!--];-->
       }
         }
         customElements.define(OrderItemsEditor.is, OrderItemsEditor);
