added order items

--- a/src/main/resources/static/frontend/src/views/orderedit/order-editor.html
+++ b/src/main/resources/static/frontend/src/views/orderedit/order-editor.html
@@ -69,6 +69,7 @@
       Ввести счет 
     </vaadin-checkbox>
    </div>
+   <vaadin-combo-box items="[[items]]" id="pricePlan" label="План цен"></vaadin-combo-box>
   </vaadin-form-layout>
   <vaadin-form-layout id="form3" colspan="3">
    <vaadin-text-field id="customerName" label="Customer" colspan="2">
