--- a/src/main/resources/static/frontend/src/views/orderedit/order-items/order-items-editor.html
+++ b/src/main/resources/static/frontend/src/views/orderedit/order-items/order-items-editor.html
@@ -38,11 +38,11 @@
 
 
 </style>
-<div class="meta-row">
- <vaadin-item>
-  <vaadin-combo-box items="[[items]]" id="pricePlan" label="План цен"></vaadin-combo-box>
- </vaadin-item>
-</div>
+<!--<div class="meta-row">-->
+ <!--<vaadin-item>-->
+  <!--<vaadin-combo-box items="[[items]]" id="pricePlan" label="План цен"></vaadin-combo-box>-->
+ <!--</vaadin-item>-->
+<!--</div>-->
 <div id="main" class="scrollable flex1">
  <vaadin-form-layout id="form1">
   <vaadin-form-layout id="form2">
