--- a/src/main/resources/static/frontend/src/components/price-item-field.html
+++ b/src/main/resources/static/frontend/src/components/price-item-field.html
@@ -1,5 +1,7 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/vaadin-combo-box/src/vaadin-combo-box.html">
+<link rel="import" href="../../bower_components/vaadin-item/src/vaadin-item.html">
+<link rel="import" href="../../bower_components/vaadin-form-layout/src/vaadin-form-layout.html">
 
 <dom-module id="price-item-field">
     <template>
@@ -7,11 +9,22 @@
             :host {
                 display: block;
             }
+
+         .status {
+             width: 25em;
+         }
+      }
         </style>
 <!--<vaadin-combo-box items="[[items]]" id="pricePlan" label="План цен"></vaadin-combo-box>-->
-<vaadin-combo-box items="[[items]]" id="service" label="Service"></vaadin-combo-box>
-<vaadin-combo-box items="[[items]]" id="unit" label="Unit"></vaadin-combo-box>
-<vaadin-combo-box items="[[items]]" id="price" label="Price"></vaadin-combo-box>
+<vaadin-form-layout style="width: 100%; height: 100%;">
+ <vaadin-item style="width:100%">
+  <vaadin-combo-box items="[[items]]" id="service" label="Услуга" style="margin-right:1em;"></vaadin-combo-box>
+  <vaadin-combo-box items="[[items]]" id="unit" label="Ед. изм."></vaadin-combo-box>
+ </vaadin-item>
+ <vaadin-item>
+  <vaadin-combo-box items="[[items]]" id="price" label="Цена" class="status"></vaadin-combo-box>
+ </vaadin-item>
+</vaadin-form-layout>
 </template>
 
     <script>
