--- a/src/main/resources/static/frontend/src/views/orderedit/order-items/order-items-editor.html
+++ b/src/main/resources/static/frontend/src/views/orderedit/order-items/order-items-editor.html
@@ -1,6 +1,5 @@
 <link rel="import" href="../../../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../../../bower_components/vaadin-form-layout/src/vaadin-form-layout.html">
-<link rel="import" href="../../../../bower_components/vaadin-combo-box/src/vaadin-combo-box.html">
 <link rel="import" href="../../../../bower_components/vaadin-item/src/vaadin-item.html">
 <link rel="import" href="../../../components/buttons-bar.html">
 <link rel="import" href="../../../../bower_components/vaadin-button/src/vaadin-button.html">
@@ -9,69 +8,98 @@
 <link rel="import" href="../../../components/amount-field.html">
 <link rel="import" href="../../../../bower_components/vaadin-grid/src/vaadin-grid.html">
 <link rel="import" href="../../../components/selected-dates.html">
-<link rel="import" href="../../../components/price-item-field.html">
+<link rel="import" href="../../../../bower_components/vaadin-combo-box/src/vaadin-combo-box.html">
+<link rel="import" href="../../../../bower_components/vaadin-form-layout/src/vaadin-form-item.html">
 
 <dom-module id="order-items-editor">
     <template>
 <style include="shared-styles">
     :host {
-        <!--display: flex;
+        display: flex;
         flex-direction: column;
-        flex: auto;-->
-        display: block;
+        flex: auto;
     }
-.meta-row {
+       .meta-row {
                 display: flex;
                 justify-content: space-between;
                 padding-bottom: var(--lumo-space-s);
             }
 
- .block {
+        .block {
 
     
- }
+        }
 
- .h5 {
-        margin-top: var(--lumo-space-m);
-        margin-bottom: var(--lumo-space-s);
-}
+        .h5 {
+             margin-top: var(--lumo-space-m);
+                margin-bottom: var(--lumo-space-s);
+        }
+
+
+
+      .dim {
+        color: var(--lumo-secondary-text-color);
+        text-align: left;
+        white-space: nowrap;
+        line-height: 2.5em;
+      }
+      .status {
+             width: 30em;
+         }
+
+         .service {
+             width: 18em;
+         }
+
+
 
 
 </style>
 <!--<div class="meta-row">-->
- <!--<vaadin-item>-->
-  <!--<vaadin-combo-box items="[[items]]" id="pricePlan" label="План цен"></vaadin-combo-box>-->
- <!--</vaadin-item>-->
+<!--<vaadin-item>-->
+<!--<vaadin-combo-box items="[[items]]" id="pricePlan" label="План цен"></vaadin-combo-box>-->
+<!--</vaadin-item>-->
 <!--</div>-->
 <div id="main" class="scrollable flex1">
+ <h2 id="title">Новая позиция заказа</h2>
+ <div id="metaContainer" class="dim">
+  <span>Позиция #<span id="ItemId"></span></span>
+ </div>
  <vaadin-form-layout id="form1">
-  <vaadin-form-layout id="form2">
-   <price-item-field id="priceField"></price-item-field>
-   <!--<vaadin-combo-box id="service" label="Вид услуги"></vaadin-combo-box>-->
-   <!--<vaadin-combo-box id="unit" label="Ед. изм."></vaadin-combo-box>-->
-   <!--<vaadin-combo-box id="price" label="Цена"></vaadin-combo-box>-->
-   <!--<h5 class="h5">Скидка</h5>-->
-   <!--<vaadin-radio-group value="value" style="font-size: var(&#45;&#45;lumo-font-size-xs);" id="discount"></vaadin-radio-group>-->
-  </vaadin-form-layout>
   <!--<vaadin-form-layout id="form3">-->
-   <!--<label style="font-size: var(&#45;&#45;lumo-font-size-xs);">Даты заказа</label>-->
-   <!--<selected-dates id="dates"></selected-dates>-->
-   <!--<vaadin-grid items="[[items]]" id="grid"></vaadin-grid>-->
+  <!--<label style="font-size: var(&#45;&#45;lumo-font-size-xs);">Даты заказа</label>-->
+  <!--<selected-dates id="dates"></selected-dates>-->
+  <!--<vaadin-grid items="[[items]]" id="grid"></vaadin-grid>-->
   <!--</vaadin-form-layout>-->
+  <vaadin-form-layout id="form2">
+   <vaadin-item>
+    <vaadin-combo-box items="[[items]]" id="service" class="service" style="margin-right:1em;" label="Услуга"></vaadin-combo-box>
+    <vaadin-combo-box items="[[items]]" id="unit" label="Ед. измерения"></vaadin-combo-box>
+   </vaadin-item>
+   <vaadin-item>
+    <vaadin-combo-box items="[[items]]" class="status" id="price" label="Цена"></vaadin-combo-box>
+   </vaadin-item>
+  </vaadin-form-layout>
+  <vaadin-form-layout id="form3">
+   <vaadin-form-item></vaadin-form-item>
+  </vaadin-form-layout>
  </vaadin-form-layout>
  <!--<div id="selectedDates" style="width: 40em; height: 35em;font-size:0.8em;">-->
-  <!--<span id="selected"></span>-->
+ <!--<span id="selected"></span>-->
  <!--</div>-->
  <!--<vaadin-horizontal-layout>-->
-  <!--<div id="dimensionsContainer"></div>-->
-  <!--<amount-field id="amount" max="9007199254740991" label="Количество"></amount-field>-->
-  <!--<div id="totalPrice">-->
-    <!--Сумма: [[totalPrice]] -->
-  <!--</div>-->
+ <!--<div id="dimensionsContainer"></div>-->
+ <!--<amount-field id="amount" max="9007199254740991" label="Количество"></amount-field>-->
+ <!--<div id="totalPrice">-->
+ <!--Сумма: [[totalPrice]] -->
+ <!--</div>-->
  <!--</vaadin-horizontal-layout>-->
  <buttons-bar>
   <vaadin-button id="add" theme="primary" slot="left">
-    Добавить 
+    [[buttonText]] 
+  </vaadin-button>
+  <vaadin-button id="cancel" slot="left">
+    Отменить 
   </vaadin-button>
   <vaadin-button theme="error" slot="right" id="delete">
     Удалить 
@@ -89,6 +117,9 @@
             static get properties() {
                 return {
                     // Declare your properties here.
+                    buttonText: {
+                    type: String
+                    }
                 };
             }
 
@@ -98,16 +129,16 @@
         // Not using attributes since Designer does not support single-quote attributes
         this.$.form1.responsiveSteps = [
           {columns: 1, labelsPosition: 'top'},
-          {minWidth: '600px', columns: 4, labelsPosition: 'top'}
+          {minWidth: '600px', columns: 1, labelsPosition: 'top'}
         ];
         this.$.form2.responsiveSteps = [
           {columns: 1, labelsPosition: 'top'},
           {minWidth: '360px', columns: 2, labelsPosition: 'top'}
         ];
-        <!--this.$.form3.responsiveSteps = [-->
-          <!--{columns: 1, labelsPosition: 'top'},-->
-          <!--{minWidth: '500px', columns: 3, labelsPosition: 'top'}-->
-        <!--];-->
+        this.$.form3.responsiveSteps = [
+          {columns: 1, labelsPosition: 'top'},
+          {minWidth: '500px', columns: 3, labelsPosition: 'top'}
+        ];
       }
         }
         customElements.define(OrderItemsEditor.is, OrderItemsEditor);
