--- a/src/main/resources/static/frontend/src/components/selected-dates.html
+++ b/src/main/resources/static/frontend/src/components/selected-dates.html
@@ -6,9 +6,10 @@
 <style include="shared-styles">
             :host {
                 display: block;
+                width: 30em;
             }
         </style>
-<vaadin-grid items="[[items]]" id="grid"></vaadin-grid>
+<!--<vaadin-grid items="[[items]]" id="grid"></vaadin-grid>-->
 <div id="div" style="width: 100%; height: 100%;"></div>
 </template>
 
